refactor: remove logout route
